# declio

./: .env.example  .gitignore  CLAUDE.md  PLANNING.md  README.md  TODOS.md  docker-compose.yml  plan.md
backend/: Dockerfile  pyproject.toml
backend/prompts/: system_prompt.md
backend/prompts/scenarios/: booking.md  cancellation.md  faq.md
backend/scripts/: cli_chat.py  seed_appointments.py  seed_cabinet.py
backend/src/api/: dependencies.py  main.py
backend/src/api/middleware/: auth.py
backend/src/api/routes/: appointments.py  auth.py  cabinets.py  calls.py  health.py  patients.py  usage.py
backend/src/api/webhooks/: telnyx_webhook.py
backend/src/api/websockets/: audio_ws.py
backend/src/application/graph/: call_graph.py  state.py
backend/src/application/use_cases/: answer_faq.py  book_appointment.py  cancel_appointment.py  confirm_booking.py  get_available_slots.py  send_call_summary.py
backend/src/domain/entities/: appointment.py  cabinet.py  call_record.py
backend/src/domain/ports/: calendar_port.py  conversation_port.py  notification_port.py  stt_port.py  telephony_port.py  tts_port.py
backend/src/domain/services/: appointment_scheduler.py  call_processor.py
backend/src/domain/value_objects/: call_summary.py  patient_contact.py  phone_number.py  time_slot.py  token_usage.py
backend/src/infrastructure/: logging_config.py
backend/src/infrastructure/adapters/: deepgram_stt.py  elevenlabs_tts.py  google_calendar.py  internal_calendar.py  mistral_conversation.py  openai_conversation.py  openai_tts.py  telnyx_sms.py  telnyx_telephony.py  (+2 more)
(+87 files in other folders)
