[project]
name = "declio-backend"
version = "0.1.0"
description = "Declio - Secretaire IA pour kinesitherapeutes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.5.0",
    "telnyx>=2.1.0",
    "deepgram-sdk>=3.7.0",
    "openai>=1.50.0",
    "elevenlabs>=1.9.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
